# drf_spectacular_extensions

./: LICENSE  Pipfile  README.md  pyproject.toml
drf_spectacular_extensions/: __init__.py  postprocessing_hooks.py
